# stacks

./: .bazelrc  .cursorrules  .env.example  .gitattributes  .gitignore  BUILD.bazel  CLAUDE.md  Dockerfile  Dockerfile.dev  MODULE.bazel  README.md  buf.gen.yaml  buf.yaml  entrypoint.sh  go.mod  go.sum  package.json  pnpm-lock.yaml  requirements.txt  sqlc.yaml  tsconfig.json  vercel.json
.claude/: settings.json  settings.local.json
.claude/hooks/: check-devcontainer-npm.sh
.devcontainer/: devcontainer.json  post-create.sh
.gen/go/sup/supconnect/: sup.connect.go
.gen/go/yo/yoconnect/: yo.connect.go
.gen/python/yo/: yo_pb2.py
api/: hello.ts  requirements.txt  stats.ts  sup.py  test.ts  tsconfig.json  yo.go
api/.gen/: hello_pb.d.ts  hello_pb.js
api/.gen/invite/: invite_pb.d.ts  invite_pb.js
api/.gen/sup/: sup_pb.d.ts  sup_pb.js
api/.gen/yo/: yo_pb.d.ts  yo_pb.js
api/invite/: index.go  invite.go
api/protos/: BUILD.bazel  hello.proto  hello_service.proto  sup.proto  yo.proto
api/protos/invite/: invite.proto
api/protos/sup/: sup.proto
api/protos/yo/: yo.proto
assets/: character_256x4.xcf  hats_128x8.xcf  key_128x1.xcf
docs/: database.md
docs/specs/: dependency-updates.md
docs/superpowers/plans/: 2026-04-06-responsive-header.md
docs/superpowers/specs/: 2026-04-06-responsive-header-design.md
drizzle/migrations/: 0000_boring_dreadnoughts.sql  0001_invite_core_identity.sql  0002_invite_tables.sql
drizzle/migrations/meta/: 0000_snapshot.json  _journal.json
frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  themes.ts
frontend/src/assets/: favicon.graphite
frontend/src/components/: Header.css  Header.tsx  OptionSlider.css  OptionSlider.tsx  ThemeDropdown.css  ThemeDropdown.tsx  header.css
frontend/src/components/features/: Home.tsx  samples.css  samples.tsx
frontend/src/components/layout/: TwoColumnLayout.css  TwoColumnLayout.tsx
frontend/src/components/ui/: Logo.tsx  Toggle.css  Toggle.tsx  button.css  button.tsx  samples.css  samples.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/features/: index.ts
frontend/src/features/game/: index.ts
frontend/src/features/game/actors/: Cannon.ts  Cannonball.ts  Door.ts  Hat.ts  Key.ts  MovingPlatform.ts  Player.ts  PlayerAnimations.ts  PushBlock.ts
frontend/src/features/greetings/: Greetings.tsx  HelloCard.tsx  StatsCard.tsx  SupCard.tsx  TestCard.tsx  YoCard.tsx  greetings.css
frontend/src/features/home/: Home.tsx  home.css
frontend/src/features/invite/: InviteManager.tsx  index.ts  invite.css
frontend/src/features/learner/: Learner.tsx  TimeLearner.tsx  index.ts  learner.css  time-learner.css  time-zones-theme.ts
frontend/src/features/samples/: Samples.tsx  index.ts  samples.css
frontend/src/lib/: authInterceptor.ts
frontend/src/styles/: global.css
frontend/src/themes/: compactness.ts
lib/adapters/mock/: greeting_store.go  greeting_store.py  greeting_store.ts
lib/adapters/postgres/: greeting_store.go  greeting_store.py  greeting_store.ts  invite_store.go
lib/adapters/postgres/db/: greeting.sql.go  invite.sql.go  models.go
lib/adapters/postgres/queries/: greeting.sql  invite.sql
lib/db/: schema.ts
lib/domain/: greeting.go  greeting.py  greeting.ts  invite.go  invite_service.go
lib/pagination/: cursor.go  cursor.ts  cursor_test.go
openspec/: project.md
openspec/artisinal/: invite.md
openspec/changes/archive/2026-04-01-upgrade-backend-deps/: design.md  proposal.md
openspec/changes/archive/2026-04-01-upgrade-dependencies/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-greeting-counter-db/: design.md
openspec/changes/archive/2026-04-05-greeting-stats-api/: design.md
openspec/changes/archive/2026-04-05-hexagonal-api-refactor/: proposal.md  tasks.md
openspec/changes/archive/2026-04-06-clerk-auth-for-greetings/: design.md
openspec/changes/archive/2026-04-15-add-list-pagination/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-invite-system-frontend/: proposal.md  tasks.md
openspec/changes/archive/2026-04-16-browser-puzzle-game/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-invitation-system/: tasks.md
openspec/changes/clerk-auth-for-greetings/: proposal.md  tasks.md
openspec/changes/connect-rpc-serverless/: design.md  proposal.md  tasks.md
openspec/changes/frontend-service-connection/: design.md  proposal.md  tasks.md
openspec/changes/greeting-counter-db/: design.md  proposal.md  tasks.md
openspec/changes/greeting-stats-api/: design.md  proposal.md  tasks.md
openspec/changes/hexagonal-api-refactor/: design.md  tasks.md
openspec/changes/invitation-system/: design.md  proposal.md  tasks.md
openspec/changes/invite-system-frontend/: design.md  tasks.md
openspec/changes/upgrade-backend-deps/: tasks.md
openspec/changes/upgrade-dependencies/: tasks.md
openspec/specs/capacity-enforcement/: spec.md
openspec/specs/clerk-auth/: spec.md
openspec/specs/dependency-upgrade-procedure/: spec.md
openspec/specs/duplicate-rsvp-protection/: spec.md
openspec/specs/event-creation/: spec.md
openspec/specs/greeting-auth-gate/: spec.md
openspec/specs/greeting-domain/: spec.md
openspec/specs/greeting-persistence/: spec.md
openspec/specs/guest-list-management/: spec.md
openspec/specs/household-tracking/: spec.md
openspec/specs/invite-management-page/: spec.md
openspec/specs/list-pagination/: spec.md
openspec/specs/person-access-control/: spec.md
openspec/specs/puzzle-game/: spec.md
openspec/specs/puzzle-level/: spec.md
openspec/specs/puzzle-player/: spec.md
openspec/specs/python-dependency-pinning/: spec.md
openspec/specs/rsvp-flow/: spec.md
scripts/golang/: BUILD.bazel
service/: BUILD.bazel  requirements.txt
service/protos/: BUILD.bazel  hello_service.proto
service/simple/: BUILD.bazel  hello.go  server.go  server.py  simple.go
(+48 files in other folders)
