bazel_dep(name = "protobuf", version = "31.0-rc1")
bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.1")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.1")

bazel_dep(name = "gazelle", version = "0.43.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

