load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_go//:defs.bzl", "go_proto_compile")
load("@rules_proto_grpc_python//:defs.bzl", "python_proto_compile")

visibility = ["//visibility:public"]

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
)

python_proto_compile(
    name = "hello_python_proto",
    protos = [":hello_proto"],
)

go_proto_library(
    name = "hello_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "com.github/maybecake/stacks/api/protos/hello",
    proto = ":hello_proto",
    visibility = ["//visibility:public"],
)
