load("@rules_go//go:def.bzl", "go_binary", "go_library")
# load("@rules_proto_grpc_python//:defs.bzl", "python_grpc_compile")
# load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# python_grpc_compile(
#     name = "hello_proto",
#     protos = ["//api/protos:hello_service_proto"],
# )

# py_library(
#     name = "simple_lib",
#     srcs = ["server.py"],
#     deps = [
#         "//api/protos:hello_service_proto",
#         "@pypi_grpcio//:pkg",
#         "@pypi_protobuf//:pkg",
#     ],
# )

# py_binary(
#     name = "simple_service",
#     srcs = ["server.py"],
#     deps = [
#         ":simple_lib",
#     ],
# )

go_binary(
    name = "simple",
    embed = [":simple_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "simple_lib",
    srcs = ["hello.go"],
    importpath = "github.com/maybecake/stacks/service/simple",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_google_grpc//:grpc"],
)
