load("@rules_go//go:def.bzl", "go_library", "go_binary")

go_library(
    name = "simple_go_lib",
    srcs = ["simple.go"],
    importpath = "github.com/maybecake/stacks/service/simple",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
        "//api/protos:hello_go_proto",
    ],
)

go_binary(
    name = "simple",
    embed = [":simple_go_lib"],
    visibility = ["//visibility:public"],
)
