load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple_go_lib",
    srcs = ["simple.go"],
    importpath = "github.com/maybecake/stacks/service/simple",
    visibility = ["//visibility:public"],
    deps = [
        "//api/protos:hello_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "simple",
    embed = [":simple_go_lib"],
    visibility = ["//visibility:public"],
)
